feat: the hire me form works

--- a/src/app/features/me/hire-me/components/text-area/text-area.component.html
+++ b/src/app/features/me/hire-me/components/text-area/text-area.component.html
@@ -3,7 +3,7 @@
     {{ label() }}
   </label>
   <textarea
-    class="bg-primary-700 text-primary-100 placeholder-primary-400 px-2.5 py-2 rounded-xl caret-primary-300 resize-none border border-primary-600 hover:inset-ring-1 hover:inset-ring-primary-600 focus:inset-ring-1 focus:inset-ring-primary-600 focus:ring-1 focus:ring-primary-500 duration-300"
+    class="bg-primary-700 text-primary-100 placeholder-primary-400 px-2.5 py-2 rounded-xl caret-primary-300 resize-none border border-primary-600 hover:inset-ring-1 hover:inset-ring-primary-600 focus:inset-ring-1 focus:inset-ring-primary-600 focus:ring-1 focus:ring-primary-500 duration-300 disabled:text-primary-300"
     [id]="name()"
     [placeholder]="placeholder()"
     [formControl]="control()"
