--- a/src/app/features/me/hire-me/components/form/form.component.html
+++ b/src/app/features/me/hire-me/components/form/form.component.html
@@ -26,8 +26,9 @@
   />
   <button
     type="submit"
-    class="px-5 py-2 rounded-xl bg-accent-700 text-white cursor-pointer hover:text-accent-50 hover:bg-accent-600 active:bg-accent-800 duration-200"
+    class="px-5 py-2 rounded-xl bg-accent-700 text-white cursor-pointer hover:text-accent-50 hover:bg-accent-600 active:bg-accent-800 duration-200 disabled:bg-accent-900"
+    [disabled]="store.loading()"
   >
-    Send message
+    {{ store.loading() ? "Sending message..." : "Send message" }}
   </button>
 </form>
