add: meta tags, noreferrer; update: images loading;

--- a/src/app/components/footer-contact-link/footer-contact-link.component.html
+++ b/src/app/components/footer-contact-link/footer-contact-link.component.html
@@ -1,5 +1,10 @@
 <li>
-  <a [href]="url()" target="_blank" class="hover:text-accent-500 duration-300">
+  <a
+    [href]="url()"
+    target="_blank"
+    class="hover:text-accent-500 duration-300"
+    rel="noreferrer"
+  >
     {{ headline() }}
   </a>
 </li>
