--- a/src/app/components/social-button/social-button.component.html
+++ b/src/app/components/social-button/social-button.component.html
@@ -2,6 +2,7 @@
   <a
     [href]="url()"
     target="_blank"
+    rel="noreferrer"
     [ngClass]="{
       'flex items-center gap-5': axis() === 'y'
     }"
