--- a/src/app/components/footer-social-link/footer-social-link.component.html
+++ b/src/app/components/footer-social-link/footer-social-link.component.html
@@ -1,7 +1,7 @@
 <p
   class="size-6 text-primary-300 hover:text-accent-500 cursor-pointer duration-300"
 >
-  <a [href]="url()" target="_blank">
+  <a [href]="url()" target="_blank" rel="noreferrer">
     <ng-content />
   </a>
 </p>
