--- a/src/app/features/me/about-me/certificates/components/certificate/certificate.component.html
+++ b/src/app/features/me/about-me/certificates/components/certificate/certificate.component.html
@@ -2,13 +2,15 @@
   <a
     [href]="certificate().url"
     target="_blank"
+    rel="noreferrer"
     class="hover:underline underline-offset-4 text-primary-400 w-full"
   >
     <app-card padding="sm">
       <article class="flex items-center gap-5">
         <img
           [src]="certificate().imageUrl"
-          alt="certificate"
+          alt="certificate image"
+          loading="lazy"
           class="aspect-video object-contain w-1/3 max-w-52 h-auto rounded-lg border-2 border-primary-700"
         />
         <div class="flex flex-col gap-1 w-2/3">
