--- a/src/app/features/me/projects/components/project-card/project-card.component.html
+++ b/src/app/features/me/projects/components/project-card/project-card.component.html
@@ -7,7 +7,8 @@
   >
     <img
       [src]="project().thumbnail"
-      alt="project cover photo"
+      alt="a project's screenshot image"
+      [loading]="loading()"
       class="aspect-video object-cover rounded-2xl border-2 border-primary-700"
       [ngClass]="{ 'lg:w-2/5 lg:h-auto': axis() === 'x' }"
     />
