--- a/src/app/features/me/projects/projects.component.html
+++ b/src/app/features/me/projects/projects.component.html
@@ -26,7 +26,11 @@
       class="w-full grid grid-cols-[repeat(auto-fit,_minmax(18rem,_1fr))] place-items-center gap-x-16 lg:gap-x-12 gap-y-12 px-5 sm:px-6 md:px-7"
     >
       @for (project of store.noFeatured(); track $index) {
-      <app-project-card class="w-full max-w-88" [project]="project" />
+      <app-project-card
+        loading="lazy"
+        class="w-full max-w-88"
+        [project]="project"
+      />
       }
     </div>
   </section>
