--- a/src/app/features/me/hire-me/components/text-area/text-area.component.html
+++ b/src/app/features/me/hire-me/components/text-area/text-area.component.html
@@ -1,12 +1,16 @@
 <div class="flex flex-col gap-2">
-  <label [for]="name()" class="text-primary-50 font-semibold">
+  <label
+    [for]="name()"
+    class="text-sm sm:text-base text-primary-50 font-semibold"
+  >
     {{ label() }}
   </label>
   <textarea
-    class="bg-primary-700 text-primary-100 placeholder-primary-400 px-2.5 py-2 rounded-xl caret-primary-300 resize-none border border-primary-600 hover:inset-ring-1 hover:inset-ring-primary-600 focus:inset-ring-1 focus:inset-ring-primary-600 focus:ring-1 focus:ring-primary-500 duration-300 disabled:text-primary-300"
+    class="text-sm sm:text-base bg-primary-700 text-primary-100 placeholder-primary-400 px-2.5 py-2 rounded-xl caret-primary-300 border border-primary-600 hover:inset-ring-1 hover:inset-ring-primary-600 focus:inset-ring-1 focus:inset-ring-primary-600 focus:ring-1 focus:ring-primary-500 duration-300 disabled:text-primary-300 resize-none field-sizing-content min-h-36 sm:min-h-28"
     [id]="name()"
     [placeholder]="placeholder()"
     [formControl]="control()"
     rows="5"
+    autocomplete="off"
   ></textarea>
 </div>
