update: about-me responsive design

--- a/src/app/features/me/about-me/components/header/header.component.html
+++ b/src/app/features/me/about-me/components/header/header.component.html
@@ -12,7 +12,7 @@
     <div class="md:w-2/3 lg:w-1/2 flex flex-col gap-5 justify-center">
       <app-title headline="About me" />
       <ul
-        class="flex flex-col gap-y-2.5 text-lg sm:text-xl text-primary-300 text-pretty"
+        class="flex flex-col gap-y-2.5 text-base sm:text-lg lg:text-xl text-primary-300 text-pretty"
       >
         @for (item of description(); track $index) {
         <li>{{ item }}</li>
