--- a/src/app/features/me/home/home.component.html
+++ b/src/app/features/me/home/home.component.html
@@ -9,8 +9,8 @@
     </div>
     <div class="flex items-center justify-end">
       <div class="flex items-center gap-x-5">
-        <app-button label="Download CV" variant="outlined" />
-        <app-button label="About Me" color="accent" />
+        <app-button label="Download CV" variant="outlined" rounded="3xl" />
+        <app-button label="About Me" color="accent" rounded="3xl" />
       </div>
     </div>
   </article>
