--- a/src/app/features/me/home/home.component.html
+++ b/src/app/features/me/home/home.component.html
@@ -4,14 +4,10 @@
   <article class="flex flex-col gap-y-7">
     <app-header />
     <app-divider />
-    <div class="flex flex-col gap-y-5 px-3 w-full max-w-xl mx-auto">
+    <app-actions />
+    <app-divider />
+    <div class="px-3 w-full max-w-xl mx-auto">
       <app-social-media />
-    </div>
-    <div class="flex items-center justify-end">
-      <div class="flex items-center gap-x-5">
-        <app-button label="Download CV" variant="outlined" rounded="3xl" />
-        <app-button label="About Me" color="accent" rounded="3xl" />
-      </div>
     </div>
   </article>
 </main>
