--- a/src/app/components/button/button.component.html
+++ b/src/app/components/button/button.component.html
@@ -3,6 +3,7 @@
   [disabled]="disabled()"
   class="px-6 py-2 text-sm sm:text-base md:text-lg cursor-pointer duration-200"
   [ngClass]="design"
+  (click)="disabled() ? undefined : onClick.emit()"
 >
   {{ label() }}
 </button>
