--- a/src/app/features/me/about-me/about-me.component.html
+++ b/src/app/features/me/about-me/about-me.component.html
@@ -1,6 +1,4 @@
-<main
-  class="container mx-auto p-3 sm:p-4 md:p-5 pb-10 sm:pb-10 md:pb-10 flex flex-col gap-10 sm:gap-12 md:gap-14"
->
+<app-container verticalPadding="pt-3 sm:pt-4 md:pt-5 pb-10">
   <app-header [description]="store.description()" />
   <app-skills-and-technologies />
   <div class="w-dvw relative left-1/2 -translate-x-1/2 bg-primary-950">
@@ -12,4 +10,4 @@
     </div>
   </div>
   <app-certificates />
-</main>
+</app-container>
