--- a/src/app/features/me/hire-me/hire-me.component.html
+++ b/src/app/features/me/hire-me/hire-me.component.html
@@ -1,4 +1,4 @@
-<main class="px-7 py-10 flex flex-col gap-10 container mx-auto">
+<app-container>
   <app-title headline="Let's work together" />
   <div class="grid gap-y-12 gap-x-7 lg:grid-cols-3">
     <app-hire-me-card headline="My Contact Media">
@@ -8,4 +8,4 @@
       <app-form />
     </app-hire-me-card>
   </div>
-</main>
+</app-container>
