--- a/src/app/features/me/home/home.component.html
+++ b/src/app/features/me/home/home.component.html
@@ -1,13 +1,13 @@
-<main
-  class="container mx-auto min-h-[calc(100dvh_-_5rem)] grid place-items-center p-3 sm:p-4 md:p-5"
->
-  <article class="flex flex-col gap-y-7">
-    <app-header />
-    <app-divider />
-    <app-actions />
-    <app-divider />
-    <div class="px-3 w-full max-w-xl mx-auto">
-      <app-social-media />
-    </div>
-  </article>
-</main>
+<app-container verticalPadding="py-0">
+  <div class="min-h-[calc(100dvh_-_5rem)] grid place-items-center">
+    <article class="flex flex-col gap-y-7">
+      <app-header />
+      <app-divider />
+      <app-actions />
+      <app-divider />
+      <div class="px-3 w-full max-w-xl mx-auto">
+        <app-social-media />
+      </div>
+    </article>
+  </div>
+</app-container>
