--- a/src/app/features/me/projects/projects.component.html
+++ b/src/app/features/me/projects/projects.component.html
@@ -1,4 +1,4 @@
-<main class="container px-7 py-10 flex flex-col gap-10 mx-auto">
+<app-container>
   <header class="flex flex-col gap-5">
     <app-title headline="Projects" />
     <!--p class="text-lg sm:text-xl text-primary-300">
@@ -34,4 +34,4 @@
       }
     </div>
   </section>
-</main>
+</app-container>
