--- a/src/app/features/me/about-me/components/header/header.component.html
+++ b/src/app/features/me/about-me/components/header/header.component.html
@@ -1,18 +1,24 @@
 <header
   class="w-full min-h-[calc(100dvh_-_5rem_-_0.75rem_*_2)] sm:min-h-[calc(100dvh_-_5rem_-_2rem)] md:min-h-[calc(100dvh_-_5rem_-_2.5rem)] border-4 border-primary-50 rounded-xl p-5 sm:p-6 flex items-center justify-center"
 >
-  <div
-    class="flex max-md:flex-col items-center gap-9 lg:gap-x-12 size-full w-full md:justify-center"
-  >
-    <img
-      src="images/about-me/cover4.gif"
-      alt="cover picture"
-      class="max-md:max-h-48 md:w-1/3 lg:w-1/2 sm:max-w-xs h-auto shadow-[0_0_10px_3px_black] shadow-primary-600/30 rounded-full aspect-square object-cover"
-    />
-    <div class="md:w-2/3 lg:w-1/2 flex flex-col gap-5 justify-center">
-      <app-title headline="About me" />
+  <div class="w-full">
+    <div class="max-lg:hidden flex items-center w-full gap-x-10">
+      <div class="lg:w-1/3"></div>
+      <div class="lg:w-2/3">
+        <app-title headline="About me" />
+      </div>
+    </div>
+    <div class="flex max-lg:flex-col items-center lg:gap-x-10">
+      <div class="lg:w-1/3">
+        <img
+          src="images/about-me/cover4.gif"
+          alt="cover picture"
+          class="max-h-48 lg:max-h-72 w-auto max-lg:sm:max-w-xs mx-auto shadow-[0_0_10px_3px_black] shadow-primary-600/30 rounded-full aspect-square object-cover"
+        />
+      </div>
+      <app-title headline="About me" class="lg:hidden mt-9 mb-5" />
       <ul
-        class="flex flex-col gap-y-2.5 text-base sm:text-lg lg:text-xl text-primary-300 text-pretty"
+        class="lg:w-2/3 flex flex-col gap-y-5 text-base sm:text-lg lg:text-xl text-primary-300 text-pretty"
       >
         @for (item of description(); track $index) {
         <li>{{ item }}</li>
