--- a/src/app/features/me/about-me/components/header/header.component.html
+++ b/src/app/features/me/about-me/components/header/header.component.html
@@ -4,7 +4,7 @@
   <div class="w-full">
     <div class="max-lg:hidden flex items-center w-full gap-x-10">
       <div class="lg:w-1/3"></div>
-      <div class="lg:w-2/3">
+      <div class="lg:w-2/3 mb-3.5">
         <app-title headline="About me" />
       </div>
     </div>
