feat: project details page

--- a/src/app/features/me/projects/components/project-card-content/project-card-content.component.html
+++ b/src/app/features/me/projects/components/project-card-content/project-card-content.component.html
@@ -40,7 +40,7 @@
       </p>
     </div>
     <ul
-      class="text-primary-300 flex items-center justify-around text-xs sm:text-sm"
+      class="text-primary-300 flex items-center justify-around text-xs lg:text-sm"
       [ngClass]="{
         'max-lg:py-2.5 lg:py-1.5 max-lg:border-t max-lg:border-primary-600 w-full lg:w-3/5':
           axis() === 'x',
