--- a/src/app/features/me/projects/projects.component.html
+++ b/src/app/features/me/projects/projects.component.html
@@ -23,7 +23,7 @@
   <section class="flex flex-col gap-y-7 items-center">
     <app-subtitle headline="All My Projects" />
     <div
-      class="w-full grid grid-cols-[repeat(auto-fit,_minmax(18rem,_1fr))] place-items-center gap-x-16 lg:gap-x-12 gap-y-12 px-5 sm:px-6 md:px-7"
+      class="w-full grid grid-cols-[repeat(auto-fit,_minmax(19rem,_1fr))] place-items-center gap-x-16 lg:gap-x-12 gap-y-12"
     >
       @for (project of store.noFeatured(); track $index) {
       <app-project-card
