--- a/src/app/features/me/projects/details/components/open-live-demo/open-live-demo.component.html
+++ b/src/app/features/me/projects/details/components/open-live-demo/open-live-demo.component.html
@@ -1,5 +1,5 @@
 <a
-  [href]="url()"
+  [href]="url() ?? '#'"
   target="_blank"
   class="px-3.5 py-1 text-sm sm:text-base text-primary-100 hover:text-accent-500 border-b-2 border-transparent hover:border-accent-500 flex items-center gap-2.5 duration-100"
 >
