fix: bug with infinite redirecting

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -34,7 +34,8 @@
     >
       <app-navbar-item
         text="Home"
-        route="/home"
+        route="/"
+        [exact]="true"
         class="max-sm:w-full"
         (onClick)="showNavbar.set(false)"
         [adjust]="adjust()"
