--- a/src/app/components/navbar-item/navbar-item.component.html
+++ b/src/app/components/navbar-item/navbar-item.component.html
@@ -2,6 +2,7 @@
   <a
     [routerLink]="route()"
     routerLinkActive="sm:border-b-4 sm:border-accent-500"
+    [routerLinkActiveOptions]="{ exact: exact() }"
     (click)="onClick.emit()"
     class="text-primary-50 text-3xl sm:text-lg md:text-xl px-5 py-2 w-full flex justify-center max-sm:hover:scale-125 max-sm:duration-200 sm:duration-300 sm:items-center 'sm:border-b sm:border-accent-950"
     [ngClass]="{
