update: action route to about-me page

--- a/src/app/features/me/home/components/actions/actions.component.html
+++ b/src/app/features/me/home/components/actions/actions.component.html
@@ -6,6 +6,6 @@
     label="About Me"
     color="accent"
     rounded="3xl"
-    [routerLink]="['..', 'about-me']"
+    routerLink="./about-me"
   />
 </div>
