--- a/src/app/features/me/projects/details/components/header/header.component.html
+++ b/src/app/features/me/projects/details/components/header/header.component.html
@@ -1,9 +1,11 @@
 <header class="flex flex-col gap-y-6 xl:flex-row-reverse gap-x-8">
   <div class="xl:w-3/5 flex flex-col gap-y-3.5">
     <app-title [headline]="project()?.title" class="xl:hidden" />
-    <div
-      class="aspect-video w-full max-w-2xl mx-auto h-auto bg-accent-900 rounded-xl"
-    ></div>
+    <img
+      [src]="gallery()[0]"
+      alt=""
+      class="aspect-video w-full max-w-2xl mx-auto h-auto rounded-xl"
+    />
   </div>
   <div
     class="flex flex-col xl:justify-between gap-y-6 xl:w-2/5 border-2 border-primary-800 rounded-xl p-5"
