--- a/src/app/features/me/projects/details/details.component.html
+++ b/src/app/features/me/projects/details/details.component.html
@@ -1,3 +1,3 @@
 <app-container>
-  <app-header [project]="store.project()" />
+  <app-header [project]="store.project()" [gallery]="store.gallery()" />
 </app-container>
