update: images design

--- a/src/app/features/me/projects/components/project-card/project-card.component.html
+++ b/src/app/features/me/projects/components/project-card/project-card.component.html
@@ -9,7 +9,7 @@
       [src]="project().thumbnail"
       alt="a project's screenshot image"
       [loading]="loading()"
-      class="aspect-video object-cover rounded-2xl border-2 border-primary-700"
+      class="aspect-video object-cover rounded-xl border-2 border-primary-700"
       [ngClass]="{ 'lg:w-2/5 lg:h-auto': axis() === 'x' }"
     />
     <div [ngClass]="{ 'lg:w-3/5': axis() === 'x' }">
