--- a/src/app/features/me/projects/details/components/header/header.component.html
+++ b/src/app/features/me/projects/details/components/header/header.component.html
@@ -4,7 +4,7 @@
     <img
       [src]="gallery()[0]"
       alt=""
-      class="aspect-video w-full max-w-2xl mx-auto h-auto rounded-xl"
+      class="aspect-video w-full max-w-2xl mx-auto h-auto rounded-xl border-2 border-primary-800 p-1"
     />
   </div>
   <div
