--- a/src/app/features/me/projects/components/project-card-content/project-card-content.component.html
+++ b/src/app/features/me/projects/components/project-card-content/project-card-content.component.html
@@ -1,59 +1,35 @@
 <div class="border-b-2 border-primary-600">
   <div class="py-2">
-    <p
-      class="text-primary-100 text-pretty text-sm sm:text-base"
-      [ngClass]="{
-        'line-clamp-3 lg:line-clamp-2': axis() === 'x',
-        'line-clamp-3': axis() === 'y'
-      }"
-    >
+    <p class="text-primary-100 text-pretty text-sm sm:text-base line-clamp-3">
       {{ description() }}
     </p>
   </div>
   <div
-    class="w-full"
-    [ngClass]="{
-      'lg:flex lg:items-center lg:gap-x-2 lg:border-t lg:border-primary-600':
-        axis() === 'x'
-    }"
+    class="flex items-center justify-around py-1.5 border-t border-primary-600 w-full"
   >
-    <div
-      class="flex items-center justify-around"
+    <p
+      class="py-0.5 px-2 sm:px-3 text-xs sm:text-sm rounded-xl cursor-default"
       [ngClass]="{
-        'max-lg:py-1.5 max-lg:border-t max-lg:border-primary-600 w-full lg:w-2/5':
-          axis() === 'x',
-        'py-1.5 border-t border-primary-600 w-full': axis() === 'y'
-      }"
-    >
-      <p
-        class="py-0.5 px-2 sm:px-3 text-xs sm:text-sm rounded-xl cursor-default"
-        [ngClass]="{
           'bg-green-900 text-green-50': status() === 'ONLINE',
           'bg-blue-900 text-blue-50': status() === 'COMPLETED',
           'bg-yellow-900 text-yellow-50': status() === 'IN_PROGRESS',
         }"
-      >
-        {{ status() | projectStatus }}
-      </p>
-      <p class="text-accent-500 text-center text-pretty text-sm sm:text-base">
-        {{ category() }}
-      </p>
-    </div>
-    <ul
-      class="text-primary-300 flex items-center justify-around text-xs lg:text-sm"
-      [ngClass]="{
-        'max-lg:py-2.5 lg:py-1.5 max-lg:border-t max-lg:border-primary-600 w-full lg:w-3/5':
-          axis() === 'x',
-        'py-2.5 border-t border-primary-600 w-full': axis() === 'y'
-      }"
     >
-      @for (skill of skills(); track $index; let i = $index) {
-      <li
-        class="py-1 px-2 sm:px-2.5 bg-primary-700 inset-ring-2 inset-ring-primary-700 hover:inset-ring-primary-600 duration-200 rounded-xl cursor-default"
-      >
-        {{ skill }}
-      </li>
-      }
-    </ul>
+      {{ status() | projectStatus }}
+    </p>
+    <p class="text-accent-500 text-center text-pretty text-sm sm:text-base">
+      {{ category() }}
+    </p>
   </div>
+  <ul
+    class="text-primary-300 flex items-center justify-around text-xs lg:text-sm py-2.5 border-t border-primary-600 w-full"
+  >
+    @for (skill of skills(); track $index; let i = $index) {
+    <li
+      class="py-1 px-2 sm:px-2.5 bg-primary-700 inset-ring-2 inset-ring-primary-700 hover:inset-ring-primary-600 duration-200 rounded-xl cursor-default"
+    >
+      {{ skill }}
+    </li>
+    }
+  </ul>
 </div>
