--- a/src/app/components/button/button.component.html
+++ b/src/app/components/button/button.component.html
@@ -1,9 +1,10 @@
 <button
   [type]="type()"
   [disabled]="disabled()"
-  class="px-6 py-2 text-sm sm:text-base md:text-lg cursor-pointer duration-500"
+  class="flex items-center justify-center gap-x-2.5 px-6 text-sm sm:text-base cursor-pointer duration-500"
   [ngClass]="design"
   (click)="disabled() ? undefined : onClick.emit()"
 >
   {{ label() }}
+  <ng-content />
 </button>
