update: 'view more' responsive padding

--- a/src/app/features/me/projects/components/project-card/project-card.component.html
+++ b/src/app/features/me/projects/components/project-card/project-card.component.html
@@ -16,7 +16,7 @@
     [category]="project().category"
     [skills]="project().skills"
   />
-  <footer class="pt-5 flex justify-center">
+  <footer class="pt-3 sm:pt-4 md:pt-5 flex justify-center">
     <app-button verticalPadding="py-1.5" label="View More" variant="outlined">
       <svg
         right-arrow-icon
