replace: 'featured' flag -> 'section' type

--- a/src/app/features/me/projects/projects.component.html
+++ b/src/app/features/me/projects/projects.component.html
@@ -13,7 +13,8 @@
     [projects]="store.featured()"
   />
   <app-projects-section
-    headline="Experiments"
-    [projects]="store.noFeatured()"
+    headline="Collaborations"
+    [projects]="store.collaboration()"
   />
+  <app-projects-section headline="Experiments" [projects]="store.small()" />
 </app-container>
