--- a/src/app/features/me/projects/components/project-card/project-card.component.html
+++ b/src/app/features/me/projects/components/project-card/project-card.component.html
@@ -20,7 +20,7 @@
     <app-button verticalPadding="py-1.5" label="View More" variant="outlined">
       <svg
         right-arrow-icon
-        class="size-5 stroke-2 stroke-primary-500 pt-px"
+        class="size-4 sm:size-5 stroke-2 stroke-primary-500 pt-px"
       ></svg>
     </app-button>
   </footer>
