--- a/src/app/features/me/projects/components/project-card-content/project-card-content.component.html
+++ b/src/app/features/me/projects/components/project-card-content/project-card-content.component.html
@@ -26,7 +26,7 @@
   >
     @for (skill of skills(); track $index; let i = $index) {
     <li
-      class="py-1 px-2 sm:px-2.5 bg-primary-700 inset-ring-2 inset-ring-primary-700 hover:inset-ring-primary-600 duration-200 rounded-xl cursor-default"
+      class="py-1 px-2 sm:px-2.5 bg-primary-700 inset-ring-2 inset-ring-primary-700 hover:inset-ring-primary-600 duration-200 rounded-xl"
     >
       {{ skill }}
     </li>
