update: project detail header responsive design

--- a/src/app/features/me/projects/details/components/header-section/header-section.component.html
+++ b/src/app/features/me/projects/details/components/header-section/header-section.component.html
@@ -1,5 +1,5 @@
 <section class="flex flex-col gap-y-1.5">
-  <h2 class="text-lg sm:text-xl font-semibold text-primary-50">
+  <h2 class="text-base sm:text-lg font-semibold text-primary-50">
     {{ headline() }}
   </h2>
   <ng-content />
