--- a/src/app/features/me/projects/details/components/header/header.component.html
+++ b/src/app/features/me/projects/details/components/header/header.component.html
@@ -4,11 +4,11 @@
     <img
       [src]="gallery()[0]"
       alt=""
-      class="aspect-video rounded-xl border-2 border-primary-800 p-1"
+      class="aspect-video rounded-xl border-1 border-primary-800 shadow-[0_0_8px_2px_var(--color-primary-800)] hover:shadow-[0_0_12px_2px_var(--color-primary-700)] duration-500"
     />
   </div>
   <div
-    class="flex flex-col lg:justify-between gap-y-6 lg:w-2/5 border-2 border-primary-800 rounded-xl p-5"
+    class="flex flex-col lg:justify-between gap-y-6 lg:w-2/5 border border-primary-800 hover:border-primary-700 rounded-xl p-5 shadow-[0_0_3px_var(--color-primary-800)] hover:shadow-[0_0_4px_1px_var(--color-primary-700)] duration-500"
   >
     <app-title [headline]="project()?.title" class="max-lg:hidden" />
     <app-header-section headline="Description">
