--- a/src/app/features/me/projects/details/components/carousel/carousel.component.html
+++ b/src/app/features/me/projects/details/components/carousel/carousel.component.html
@@ -1,5 +1,34 @@
-<img
-  [src]="store.gallery()[store.selectedIndex()]"
-  alt=""
-  class="aspect-video rounded-xl border-1 border-primary-800 shadow-[0_0_8px_2px_var(--color-primary-800)] hover:shadow-[0_0_12px_2px_var(--color-primary-700)] duration-500"
-/>
+<div class="w-full flex flex-col gap-y-5">
+  <img
+    [src]="store.gallery()[store.selectedIndex()]"
+    alt="big image of the project"
+    class="aspect-video rounded-xl border-1 border-primary-800 shadow-[0_0_8px_2px_var(--color-primary-800)] hover:shadow-[0_0_12px_2px_var(--color-primary-700)] duration-500"
+  />
+  <div class="flex items-center justify-center gap-x-3.5">
+    <svg
+      arrow-icon
+      class="size-10 sm:size-12 rotate-180 stroke-3"
+      [ngClass]="store.isFirst() ? 'stroke-primary-400' : 'stroke-primary-300'"
+      (click)="store.setPrevious()"
+    ></svg>
+    <ul class="flex items-center justify-center gap-x-3.5">
+      @for (item of store.gallery(); track $index; let i = $index) {
+      <li>
+        <img
+          [src]="item"
+          alt="one image of the project"
+          class="aspect-video object-cover w-24 sm:w-32 h-auto rounded-2xl"
+          [ngClass]="{ 'ring-4 ring-primary-500': store.selectedIndex() === i }"
+          (click)="store.setSelectedIndex(i)"
+        />
+      </li>
+      }
+    </ul>
+    <svg
+      arrow-icon
+      class="size-10 sm:size-12 stroke-3"
+      [ngClass]="store.isLast() ? 'stroke-primary-400' : 'stroke-primary-300'"
+      (click)="store.setNext()"
+    ></svg>
+  </div>
+</div>
